--- a/medium/index.html
+++ b/medium/index.html
@@ -52,6 +52,9 @@
     </div>
     <div class="clear"></div>
   </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="assets/javascript/medium.js"></script>
+  
+
 </body>
 </html>
